--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav id="mainnavbar" class="navbar navbar-expand-sm navbar-light py-0 fixed-top">
 
         <a href="#home" class="navbar-brand"><img width="30" height="30" class="d-inline-block align-top"
-                src="G:\web Development\Images\avatar.png" alt=""> IT'S ME</a>
+                src=".\avatar.png" alt=""> IT'S ME</a>
 
         <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#navlinks"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,14 +55,14 @@
                 </div>
             </div>
             <div class="col-md-6 px-0">
-                <img class="img-fluid" src="G:\web Development\Images\liam.jpg" alt="art_img">
+                <img class="img-fluid" src=".\liam.jpg" alt="art_img">
             </div>
         </div>
     </section>
     <section class="container-fluid px-0 content">
         <div class="row mx-0">
             <div class="col-md-6 px-0 order-2 order-md-1">
-                <img class="img-fluid" src="G:\web Development\Images\jump.jpg" alt=" ">
+                <img class="img-fluid" src=".\jump.jpg" alt=" ">
             </div>
             <div class="col-md-6 d-flex align-items-center order-1 order-md-2">
                 <div id="section2-col2" class="row text-center justify-content-center">
@@ -71,7 +71,7 @@
                             ILLUSION PYRAMID
                         </h2>
                         <img class="d-none d-lg-inline" width="100" height="100"
-                            src="G:\web Development\Images\person.png" alt="">
+                            src=".\person.png" alt="">
                         <p class="py-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad placeat, voluptatem
                             earum aut
                             provident
@@ -92,7 +92,7 @@
                             ILLUSION PYRAMID
                         </h2>
                         <img class="d-none d-lg-inline" width="100" height="100"
-                            src="G:\web Development\Images\person.png" alt="">
+                            src=".\person.png" alt="">
                         <p class="py-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad placeat, voluptatem
                             earum aut
                             provident
@@ -103,7 +103,7 @@
                 </div>
             </div>
             <div class="col-md-6 px-0">
-                <img class="img-fluid" src="G:\web Development\Images\dancer.jpg" alt=" ">
+                <img class="img-fluid" src=".\dancer.jpg" alt=" ">
             </div>
         </div>
     </section>
@@ -111,7 +111,7 @@
         <div class="row mx-0">
             <div class="col-md-6 px-0 order-2 order-md-1">
                 <img class="img-fluid"
-                    src="G:\web Development\Images\brian.jpg"
+                    src=".\brian.jpg"
                     alt=" ">
             </div>
             <div class="col-md-6 d-flex align-items-center order-1 order-md-2">
@@ -121,7 +121,7 @@
                             ILLUSION PYRAMID
                         </h2>
                         <img class="d-none d-lg-inline" width="100" height="100"
-                            src="G:\web Development\Images\person.png" alt="">
+                            src=".\person.png" alt="">
                         <p class="py-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad placeat, voluptatem
                             earum aut
                             provident
